[tool.poetry]
name = "dlqmc_proj"
version = "0.1.0"
description = "Deep-learning quantum Monte Carlo project"
authors = [
    "Zeno Schätzle <zenoone@physik.fu-berlin.de>",
    "Jan Hermann <jan.hermann@fu-berlin.de>",
]
packages = []

[tool.poetry.dependencies]
python = "^3.7"
dlqmc = { path = "extern/dlqmc", develop = true, extras = ['test', 'train'] }

[tool.poetry.dev-dependencies]
ipykernel = "^5.1"
matplotlib = "^3.0"
ipywidgets = "^7.4"
Pillow = "^5.4"
flake8 = "^3.5"
flake8-bugbear = "^18.8"
flake8-comprehensions = "^1.4"
flake8-quotes = "^1.0"
black = "^19-beta.0"
pep8-naming = "^0.7.0"
isort = "^4.3"
nbstripout = "^0.3.5"
pysnooper = "^0.0.12"

[tool.black]
target-version = ["py37"]
skip-string-normalization = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
