[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "dlqmc"
version = "0.1.0"
description = "Deep-learning quantum Monte Carlo project"
authors = [
    "Zeno Schätzle <zenoone@physik.fu-berlin.de>",
    "Jan Hermann <jan.hermann@fu-berlin.de>",
]
packages = [
    { include = "dlqmc", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
deepqmc = { path = "extern/deepqmc", develop = true, extras = ['all', 'doc'] }
click = "^7.0"
pandas = "^1.0.1"
tomlkit = "^0.5.8"
pyscf = "<1.7"
chemcoord = "^2.0.4"
torch = "<=1.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.5"
flake8-bugbear = ">=18.8"
flake8-comprehensions = ">=1.4"
flake8-quotes = "^2"
black = ">=19-beta.0"
pep8-naming = ">=0.7"
isort = "^4.3"
ipykernel = "^5.1"
matplotlib = "^3.0"
ipywidgets = "^7.4"
nbstripout = "^0.3.5"
pysnooper = "^0.0.12"
pycodestyle = { git = "https://github.com/PyCQA/pycodestyle.git", rev = 'd219c68' }
pyflakes = { git = "https://github.com/PyCQA/pyflakes.git", rev = '1911c20' }

[tool.poetry.scripts]
dlqmc = "dlqmc.cli:cli"

[tool.black]
target-version = ["py37"]
skip-string-normalization = true
